test/bad/t0020.zls
(*
  The variable x is initialized but is not given a derivative
*)

let hybrid f () =
  let rec
    match true with
    | true -> do x = 1.0 and init x = 0.0 done
    | fase -> do x = 2.0 done in
  x

